completed stocks app

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,106 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.nav{
+  background-color: rgb(197, 255, 197);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.nav > h1 {
+  margin-bottom: 0px;
+}
+
+.navContainer{
+  display: flex;
+  flex-direction: row;
+  align-items: flex-end;
+}
+
+.bannerLink{
+  padding-right: 20px;
+}
+
+.aboutText{
+  text-align: center;
+  padding-top: 200px;
+}
+
+.home{
+  text-align: center;
+  padding-top: 200px;
+}
+
+.titleResources{
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.stocksList{
+  display: grid;
+  grid-template-columns: repeat(4, 2fr);
+  justify-content: space-between;
+  padding: 10px;
+  border-bottom: 1px solid black;
+  padding-left: 20px;
+}
+
+.stockShow{
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  padding-left: 20px;
+}
+
+.stockShow1{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.symbolShow{
+  font-style: italic;
+  position: relative;
+  bottom: 30px;
+}
+.symbolDash{
+font-style: italic;
+}
+.stockShow2{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  position: relative;
+  bottom: 30px;
+}
+
+.stockShow3{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  position: relative;
+  bottom: 30px;
+}
+
+.backLink{
+  text-align: center;
+}
+
+.back{
+  background-color: rgb(197, 255, 197);
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+.bannerTitle{
+  padding-left: 20px
+}
+
+li{
+  list-style-type: none;
+  padding: 5px;
+}
+
+
